# iap-https-rust

./: GEMINI.md  Makefile  README.md  init.sh  set_key.sh  stdiokey-rust
bearer-go/: Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  go.mod  main.go  main_test.go  startbearer-go.sh
bearer-go/.gemini/: settings.json
bearer-python/: .gitignore  GEMINI.md  Makefile  README.md  cloudbuild.yaml  main.py  pyproject.toml  startbearer-python.sh
bearer-python/.gemini/: settings.json
bearer-rust/: Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  startbearer-rust.sh
bearer-rust/.gemini/: settings.json
bearer-rust/src/: main.rs
iap/: Cargo.toml  Dockerfile  GEMINI.md  Makefile  cloudbuild.yaml  iap_service_settings.yaml  iap_settings.yaml
iap/.gemini/: settings.json  settings.json.cloudrun  settings.json.https
iap/src/: main.rs
local/: Cargo.toml  GEMINI.md  Makefile  README.md  iap_service_settings.yaml
local-python/: README.md  main.py
local-python/.gemini/: settings.json
local-python/tests/: test_main.py
manual/: Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  iap_programmatic_settings.yaml  iap_service_settings.yaml
manual-go/: .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  go.mod  go.sum  main.go  main_test.go
manual-python/: .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  main.py  pyproject.toml
manual-python/.gemini/: settings.json
manual-python/tests/: test_middleware.py
proxy-go/: Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  go.mod  go.sum  main.go  startproxy-go.sh
proxy-python/: Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  main.py  pyproject.toml  startproxy-python.sh
proxy-python/.gemini/: settings.json
proxy-python/tests/: test_main.py
proxy-rust/: Makefile  README.md  cloudbuild.yaml  startproxy-rust.sh
stdio/: Cargo.toml  GEMINI.md  Makefile  README.md
stdio-go/: .gitignore  GEMINI.md  Makefile  README.md  go.mod  go.sum  main.go  main_test.go
stdiokey/: Cargo.toml  GEMINI.md  Makefile  README.md
stdiokey-go/: .gitignore  GEMINI.md  Makefile  README.md  go.mod  go.sum  main.go
stdiokey-python/: .gitignore  GEMINI.md  Makefile  README.md  main.py  pyproject.toml
stdiokey-python/.gemini/: settings.json  settings.json.bad
stdiokey-python/tests/: test_main.py
stdiokey/.gemini/: settings.json  settings.json.key  settings.json.nokey
stdiokey/src/: main.rs
(+13 files in other folders)
