[package]
name = "sysutils-stdiokey-rust"
version = "0.4.0"
edition = "2024"
description = "System Utilities with API Key MCP Stdio transport in Rust"
license = "MIT"
repository = "https://github.com/xbill9/iap-https-rust"

[dependencies]
anyhow = "^1.0.98"
rmcp = { version = "0.14.0", features = ["server", "macros", "transport-io"] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
schemars = "1"
sysinfo = "0.37.2"
tokio = { version = "^1.46.0", features = ["macros", "rt-multi-thread", "signal", "process"] }
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.19", features = ["env-filter", "json", "tracing-log"] }
# Added for Auth
google-apikeys2 = "7.0.0"
yup-oauth2 = "12.1.2"
hyper-util = "0.1.20"
hyper-rustls = { version = "0.27.7", default-features = false, features = ["native-tokio", "http1", "http2", "tls12", "ring", "logging"] }

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
